# fs-search

./: .gitignore  LICENCE  Makefile  README.md  bumpversion.py  managedeps.py  out.txt  setup.cfg  setup.py
fs_search/: core.py  main.py  utils.py
