[metadata]
name = fs-search
version = 0.1.2
author = voyager-2021
author_email = voyager-2019@outlook.com
license = MIT
description = CLI tool for listing paths in the base directory
url = https://github.com/voyager-2021/fs-search
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/voyager-2021/fs-search
    Issues = https://github.com/voyager-2021/fs-search/issues

[options]
packages = find:
zip_safe = no
install_requires = colorama>=0.4.6
python_requires = >=3.10,<4.0

[options.entry_points]
console_scripts = fs-search = fs_search.main:main

[options.extras_require]
dev =
    mypy>=1.13.0
    setuptools>=75.6.0
    twine>=6.0.1
    build>=1.2.2.post1
    wheel>=0.45.1
